# dontpanic

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
dontpanic/: __init__.py  dontpanic.py
