[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dontpanic"
version = "0.1.0"
authors = [
  { name="T E Vaughan", email="underwood@underwood.network" }
]
description = "Suppress Ctrl+C traceback spam."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Shells",
]

[project.urls]
Homepage = "https://github.com/thunderpoot/dontpanic"
Repository = "https://github.com/thunderpoot/dontpanic"
