[metadata]
name = dontpanic
version = 0.1.0
author = T E Vaughan
author_email = underwood@underwood.network
description = Suppress ^C traceback spam.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thunderpoot/dontpanic
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: System :: Shells

[options]
packages = find:
python_requires = >=3.6
